--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <input type="text" id="nom" name="nom" placeholder="Votre nom">
                 <label for="email">Avec qui voulez-vous partager votre score ?</label>
                 <input type="email" id="email" name="email" placeholder="nom@domaine.com">
-                <button id="btnEnvoyerMail">Envoyer</button>
+                <button id="btnEnvoyerMail" type="submit">Envoyer</button>
             </form>
         </div>
     </div>
