Ajout d'autres mots et phrases

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               <li>Un temps inférieur à 9 secondes donne 8 points.</li>
               <li>Un temps compris entre 8 secondes et 16 secondes donne 4 points.</li>
               <li>Un temps supérieur à 16 secondes donne 2 points.</li>
+              <li>Une phrase ou un mot mal écrit ne rapporte aucun point.</li>
             </ul>
         </div>
 
