--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
               <li>Un temps compris entre 8 secondes et 16 secondes donne 4 points.</li>
               <li>Un temps supérieur à 16 secondes donne 2 points.</li>
               <li>Une phrase ou un mot mal écrit ne rapporte aucun point.</li>
+              <li>Les espaces vides fausse le résultat.</li>
             </ul>
         </div>
 
         <div class="Demarrage">
-            <button id="start">Lancer le jeu</button>
+            <button id="start">A vos clavier!!!Lancer le jeu</button>
         </div>
 
         <div class="zoneOptions">
