--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpeedType: A productif app</title>
+    <meta
+      name="description"
+      content="Optimisez vos compétences de saise avec SpeedType!"
+    />
     <!-- Inclusion du fichier css pour le style du jeu -->
     <link rel="stylesheet" href="style/style.css">
 
