--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="Demarrage">
-            <button id="start">A vos clavier!!!Lancer le jeu</button>
+            <button id="start">Cliquer ici pour lancer le jeu!!!</button>
         </div>
 
         <div class="zoneOptions">
